--- a/js_class_book.html
+++ b/js_class_book.html
@@ -15,7 +15,7 @@ class Book
 		  this.author = "";
 		  this.price = 0;
     
-      //переменная класса с набором свойств
+      //переменная с набором свойств
 	   	this.info =
 		{
 		    pagesCount: 100,
