--- a/js_coffee.html
+++ b/js_coffee.html
@@ -34,9 +34,9 @@ class Coffee
 	}
 };
 
-let coffee = new Coffee(100);
-coffee.setWater(250);
-coffee.start();
+let coffee = new Coffee(100);//создать объект Кофеварка
+coffee.setWater(250);//налить воды в кофеварку
+coffee.start();//включить кофеварку
 </script>
 
 
